--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="style.css" rel="stylesheet">
-<link rel="shortcut icon" href="favicon.ico" type="img/favicon.ico">
+<link rel="icon" type="image/png" href="favicon.png">
 <title>HHS Cafe</title>
 </head>
 
@@ -23,7 +23,7 @@
   <li><a href="contact.html">Contact</a></li>
 </ul>
 
-    
+    <!--Menu List -->
 
     <div class="menu">
 <h1 class="title">Menu</h1>
