--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <ul class="navbar">
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
-  <li><a class="active" href="contact.html">Contact</a></li>
+  <li><a class="active" href="contact.html">Contact/Order</a></li>
 </ul>
 
 
