--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <ul class="navbar">
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
-  <li><a href="contact.html">Contact</a></li>
+  <li><a href="contact.html">Contact/Order</a></li>
 </ul>
 </div>
 
