--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
 <ul class="navbar">
   <li><a href="index.html">Home</a></li>
   <li><a class="active" href="menu.html">Menu</a></li>
-  <li><a href="contact.html">Contact</a></li>
+  <li><a href="contact.html">Contact/Order</a></li>
 </ul>
 
     <!--Menu List -->
